# backend/docs/swagger.json
@@ -457,6 +457,22 @@
                 "responses": {}
             }
         },
+        "/misc/": {
+            "get": {
+                "description": "Get all misc data used in homepage",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "misc"
+                ],
+                "summary": "Get all misc data used in homepage",
+                "responses": {}
+            }
+        },
         "/oa/{vendor}/AuthorizationService3rdParty/version": {
             "put": {
                 "description": "get the version and configuration available",
